Can now display individual food item

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -191,6 +191,24 @@ h3 {
   animation: spin 1.2s linear infinite;
 }
 
+.underline {
+  text-decoration: underline;
+}
+
+.quiz-me-button {
+  margin-bottom: 2rem;
+}
+.center {
+  text-align: center;
+  justify-content: center;
+}
+#ingredients {
+  text-align: center;
+}
+
+#ingredient-list {
+  justify-content: center;
+}
 @keyframes spin {
   0% {
     transform: rotate(0deg);
